working on spacing and padding along side some fixes on the alignment on the notifications box

--- a/.config/ags/style/widgets/calendar.sass
+++ b/.config/ags/style/widgets/calendar.sass
@@ -1,8 +1,11 @@
 window#dashboard .dashboard
   .notifications
     .header
-      background-color: black
-      padding: $padding
+      background-color: cyan
+      margin-bottom: $spacing
+      
+      label
+        margin-left: $radious
 
   .dashboard
     background-color: black
